Documentation overhaul, addition of workflows, implementation of Sphinx
- Documentation Overhaul

-- Update documentation for STMint.py to match Numpy docstring formatting
-- Rename functions within STMint.py to reflect whether they are intended for
users or internal computation (adding _)

- Addition of workflows

-- Added workflow/github action to deploy package to PyPI
-- Added skeletal structure to run test cases on a git push

- Implementation of Sphinx

-- Added Sphinx to the project
-- Created a readTheDocs page for the project
-- Updated README.md to reflect these changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ url=https://github.com/SIOSlab/STMInt
 author = Jackson Kulik, Cedric Orton-Urbina
 author_email=cpk258@cornell.edu, ceo29@cornell.edu
 description=State Transition Matrix Integrator
-long_description=long_description
+long_description= file:README.md
 long_description_content_type=text/markdown
 license = MIT
 classifiers=
