--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,11 +12,11 @@ formats:
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: docs/source/conf.py
+   configuration: docs/conf.py
 
 python:
    install:
-   - requirements: docs/source/doc_requirements.txt
+   - requirements: docs/doc_requirements.txt
 
 # Set the version of Python and other tools you might need
 build:
