--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,9 @@ long_description= file:README.md
 long_description_content_type=text/markdown
 license = MIT
 classifiers=
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
 
@@ -22,6 +22,5 @@ install_requires=
     numpy
     scipy
     astropy
-    sympy==1.12
-    poliastro
-python_requires = >= 3.7
+    sympy
+python_requires = >= 3.10
