--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
 
     needs:
-      - release-build
+      - build
 
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
